// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extend index management ilm banner extension should return extension when any index has lifecycle error 1`] = `
Object {
  "filter": Query {
    "ast": _AST {
      "_clauses": Array [
        Object {
          "field": "ilm.step",
          "match": "must",
          "operator": "eq",
          "type": "field",
          "value": "ERROR",
        },
      ],
      "_indexedClauses": Object {
        "field": Object {
          "ilm.step": Array [
            Object {
              "field": "ilm.step",
              "match": "must",
              "operator": "eq",
              "type": "field",
              "value": "ERROR",
            },
          ],
        },
        "group": Array [],
        "is": Object {},
        "term": Array [],
      },
    },
    "syntax": Object {
      "parse": [Function],
      "print": [Function],
      "printClause": [Function],
    },
    "text": "ilm.step:ERROR",
  },
  "filterLabel": "Show errors",
  "title": "1
          index has
          lifecycle errors",
  "type": "warning",
}
`;

exports[`extend index management ilm filter extension should return extension when any index has lifecycle policy 1`] = `
Array [
  Object {
    "field": "ilm.managed",
    "multiSelect": false,
    "name": "Lifecycle status",
    "options": Array [
      Object {
        "value": true,
        "view": "Managed",
      },
      Object {
        "value": false,
        "view": "Unmanaged",
      },
    ],
    "type": "field_value_selection",
  },
  Object {
    "field": "ilm.phase",
    "multiSelect": "or",
    "name": "Lifecycle phase",
    "options": Array [
      Object {
        "value": "hot",
        "view": "Hot",
      },
      Object {
        "value": "warm",
        "view": "Warm",
      },
      Object {
        "value": "frozen",
        "view": "Frozen",
      },
      Object {
        "value": "cold",
        "view": "Cold",
      },
      Object {
        "value": "delete",
        "view": "Delete",
      },
    ],
    "type": "field_value_selection",
  },
]
`;

exports[`extend index management ilm summary extension should return extension when index has lifecycle error 1`] = `
Array [
  <h3
    class="euiTitle euiTitle--small"
  >
    Index lifecycle management
  </h3>,
  <div
    class="euiSpacer euiSpacer--s css-i2qclb-euiSpacer-s"
  />,
  <div
    class="euiCallOut euiCallOut--danger"
  >
    <div
      class="euiCallOutHeader"
    >
      <span
        aria-hidden="true"
        class="euiCallOutHeader__icon"
        color="inherit"
        data-euiicon-type="cross"
      />
      <span
        class="euiCallOutHeader__title"
      >
        Index lifecycle error
      </span>
    </div>
    <div
      class="euiText euiText--small"
    >
      <div
        class="euiTextColor euiTextColor--default"
      >
        illegal_argument_exception: setting [index.lifecycle.rollover_alias] for index [testy3] is empty or not defined
      </div>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--m css-hg1jdf-euiSpacer-m"
  />,
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <dl
        class="euiDescriptionList euiDescriptionList--column"
      >
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Lifecycle policy
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          <a
            class="euiLink euiLink--primary"
            href="management/data/index_lifecycle_management//policies/edit/testy"
            rel="noreferrer"
          >
            testy
          </a>
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Current action
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          rollover
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Failed step
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          check-rollover-ready
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem"
    >
      <dl
        class="euiDescriptionList euiDescriptionList--column"
      >
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Current phase
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          hot
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Current action time
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          2018-12-07 13:02:55
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Phase definition
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          <div
            class="euiPopover euiPopover--anchorDownCenter"
            id="phaseExecutionPopover"
          >
            <div
              class="euiPopover__anchor"
            >
              <button
                class="euiLink euiLink--primary"
                type="button"
              >
                Show definition
              </button>
            </div>
          </div>
        </dd>
      </dl>
    </div>
  </div>,
]
`;

exports[`extend index management ilm summary extension should return extension when index has lifecycle policy 1`] = `
Array [
  <h3
    class="euiTitle euiTitle--small"
  >
    Index lifecycle management
  </h3>,
  <div
    class="euiSpacer euiSpacer--m css-hg1jdf-euiSpacer-m"
  />,
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <dl
        class="euiDescriptionList euiDescriptionList--column"
      >
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Lifecycle policy
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          <a
            class="euiLink euiLink--primary"
            href="management/data/index_lifecycle_management//policies/edit/testy"
            rel="noreferrer"
          >
            testy
          </a>
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Current action
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          complete
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Failed step
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          -
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem"
    >
      <dl
        class="euiDescriptionList euiDescriptionList--column"
      >
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Current phase
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          new
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <strong>
            Current action time
          </strong>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          2018-12-07 13:02:55
        </dd>
      </dl>
    </div>
  </div>,
]
`;

exports[`extend index management remove lifecycle action extension should return extension when all indices have lifecycle policy 1`] = `
Object {
  "buttonLabel": "Remove lifecycle policy",
  "icon": "stopFilled",
  "indexNames": Array [
    Array [
      "testy3",
      "testy3",
    ],
  ],
  "renderConfirmModal": [Function],
}
`;

exports[`extend index management retry lifecycle action extension should return extension when all indices have lifecycle errors 1`] = `
Object {
  "buttonLabel": "Retry lifecycle step",
  "icon": "play",
  "indexNames": Array [
    Array [
      "testy3",
      "testy3",
    ],
  ],
  "requestMethod": [Function],
  "successMessage": "Called retry lifecycle step for: \\"testy3\\", \\"testy3\\"",
}
`;
